Get non-animated rendering of skeletal model mostly working

--- a/include/BLIB/Components/CMakeLists.txt
+++ b/include/BLIB/Components/CMakeLists.txt
@@ -14,6 +14,8 @@ target_sources(BLIB PUBLIC
 	Physics2D.hpp
 	Shape2D.hpp
 	Slideshow.hpp
+	Skeleton.hpp
+	SkeletonIndexLink.hpp
 	Sprite.hpp
 	Text.hpp
 	TilemapPosition.hpp
