--- a/include/BLIB/Models/CMakeLists.txt
+++ b/include/BLIB/Models/CMakeLists.txt
@@ -1,6 +1,10 @@
 target_sources(BLIB PUBLIC
+    Animation.hpp
     Bone.hpp
+    BoneAnimation.hpp
     BoneSet.hpp
+    KeyframeQuaternion.hpp
+    KeyframeVector.hpp
     Material.hpp
     MaterialSet.hpp
     Mesh.hpp
