--- a/src/Models/CMakeLists.txt
+++ b/src/Models/CMakeLists.txt
@@ -1,6 +1,11 @@
 target_sources(BLIB PRIVATE
+	Animation.cpp
+	AnimationSet.cpp
+	BoneAnimation.cpp
 	BoneSet.cpp
 	Importer.cpp
+	KeyframeQuaternion.cpp
+	KeyframeVector.cpp
 	MaterialSet.cpp
 	Mesh.cpp
 	MeshSet.cpp
