Refactor skeletal model to be represented fully in ECS

--- a/include/BLIB/Components/CMakeLists.txt
+++ b/include/BLIB/Components/CMakeLists.txt
@@ -4,6 +4,7 @@ target_sources(BLIB PUBLIC
 	BatchedShapes2D.hpp
 	BatchedSlideshows.hpp
 	BatchedSprites.hpp
+	Bone.hpp
 	Hitbox2D.hpp
 	MarkedForDeath.hpp
 	MaterialInstance.hpp
