Add zlib as module and use in assimp

--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "lib/assimp"]
 	path = lib/assimp
 	url = git@github.com:assimp/assimp.git
+[submodule "lib/zlib"]
+	path = lib/zlib
+	url = git@github.com:madler/zlib.git
