Move window ownership and management into renderer

--- a/include/BLIB/Render/CMakeLists.txt
+++ b/include/BLIB/Render/CMakeLists.txt
@@ -6,6 +6,7 @@ target_sources(BLIB PUBLIC
     RenderTarget.hpp
     Settings.hpp
     UpdateSpeed.hpp
+    Window.hpp
 )
 
 add_subdirectory(Buffers)
