--- a/src/Render/CMakeLists.txt
+++ b/src/Render/CMakeLists.txt
@@ -1,8 +1,10 @@
 target_sources(BLIB PRIVATE
+    GraphicsSettings.cpp
     Observer.cpp
     Renderer.cpp
     RenderTarget.cpp
     Settings.cpp
+    WindowSettings.cpp
 )
 
 add_subdirectory(Buffers)
